ADA03/force-app/main/default/objects/Opportunity/fields/Colour_Flag__c.field-meta.xml
<CustomField>
    <fullName>Colour_Flag__c</fullName>
    <label>Colour Flag</label>
    <length>10</length>
    <type>Text</type>
</CustomField>