ADA03/force-app/main/default/objects/Opportunity/fields/Colour_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Colour_Revenue__c</fullName>
    <formula>IF( Colour_Flag__c = &apos;RED&apos;, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 30, 30),
IF(Colour_Flag__c = &apos;YELLOW&apos;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 30, 30),
IF(Colour_Flag__c = &apos;GREEN&apos;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 30, 30),
IMAGE(&quot;https://mcdn.wallpapersafari.com/medium/11/79/PaHE2U.jpg&quot;, &quot;orange&quot;, 30, 30) ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Colour Revenue</label>
    <type>Text</type>
</CustomField>