ADA03/force-app/main/default/objects/Opportunity/fields/Submit_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Submit_Annual_Revenue__c</fullName>
    <label>Submit Annual Revenue</label>
    <required>true</required>
    <type>Date</type>
</CustomField>